Views updated to not use database names

--- a/CookingCurator/Views/Profile/Dashboard.cshtml
+++ b/CookingCurator/Views/Profile/Dashboard.cshtml
@@ -4,7 +4,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Admin Dashboard</h2>
-<!-- <h4>Logged in as @ViewBag.Username</h4> -->
+
+@if (User.Identity.IsAuthenticated)
+{
+    <h4>Logged in as @(User.Identity.IsAuthenticated ? HttpContext.Current.User.Identity.Name : "Guest")</h4>
+}
+
 <hr />
 
 <div style="font-size:xx-large" class="col-lg-6 text-center">
