--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -37,10 +37,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.source_ID)
+            Recipe Source Number
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.source_Link)
+            Source Link
         </th>
     </tr>
 
