--- a/CookingCurator/Views/User/Index.cshtml
+++ b/CookingCurator/Views/User/Index.cshtml
@@ -13,16 +13,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.user_ID)
+            User ID Numbers
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.userName)
+            Usernames
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.userEmail)
+            Email Addresses
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.banUser)
+            Ban Status
         </th>
         <th></th>
     </tr>
