--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -1,25 +1,22 @@
-﻿@model CookingCurator.EntityModels.RecipeBaseViewModel
+﻿@model CookingCurator.EntityModels.RecipeWithIngredBaseViewModel
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Html.DisplayFor(model => model.title)</h2>
+<h2>Details</h2>
 
 <div>
-    <h5>
-        by @Html.DisplayFor(model => model.author) |
-        @Html.ActionLink("View all Recipes from this Author", "Authors", new { authorName = Model.author }) 
-    </h5>
+    <h4>RecipeWithIngredBaseViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.instructions)
+            @Html.DisplayNameFor(model => model.title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.instructions)
+            @Html.DisplayFor(model => model.title)
         </dd>
 
         <dt>
@@ -31,11 +28,27 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.instructions)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.instructions)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.lastUpdated)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.lastUpdated)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.author)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.author)
         </dd>
 
         <dt>
@@ -76,6 +89,17 @@
 
         <dd>
             @Html.DisplayFor(model => model.mealTimeType)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ingreds)
+        </dt>
+
+        <dd>
+            @foreach (var p in Model.ingreds)
+            {
+                <span>@p.ingred_Name</span><br/>
+            }
         </dd>
 
     </dl>
