Accept waiver feature added

--- a/CookingCurator/Views/Home/RegisterationSuccess.cshtml
+++ b/CookingCurator/Views/Home/RegisterationSuccess.cshtml
@@ -8,5 +8,5 @@
 
 <div class="alert alert-success">
     <p> <b>Success!</b> Your account has been created successfully. An email is sent to your account. </p>
-    <p> Please verify your account to enable more features. Click here to go to @Html.ActionLink("Main Page", "Index", "Home") </p>
+    <p> Please verify your account to enable more features. Click here to go to @Html.ActionLink("Accept Waiver", "AcceptWaiver", "Home", new { id = @ViewBag.MyString }, null) </p>
 </div>
