Views updated to not use database names.  Links added.

--- a/CookingCurator/Views/Home/VerifyAccount.cshtml
+++ b/CookingCurator/Views/Home/VerifyAccount.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "VerifyAccount";
+    ViewBag.Title = "Verify Account";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>VerifyAccount</h2>
+<h2>Account Verified!</h2>
 
 <div class="alert alert-success">
     <b>Success!</b> Your account has been verified. Click here to @Html.ActionLink("Login", "Login", "Home")
