--- a/CookingCurator/Views/Recipe/Edit.cshtml
+++ b/CookingCurator/Views/Recipe/Edit.cshtml
@@ -107,7 +107,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Recipe List", "Index")
 </div>
 
 @section Scripts {
