--- a/CookingCurator/Views/User/Search.cshtml
+++ b/CookingCurator/Views/User/Search.cshtml
@@ -32,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to User List", "Index")
 </div>
 
 @section Scripts {
