--- a/CookingCurator/Views/Home/Index.cshtml
+++ b/CookingCurator/Views/Home/Index.cshtml
@@ -7,13 +7,15 @@
     <p class="lead">
         @if (User.Identity.IsAuthenticated)
         {
-             <p>Welcome User @(User.Identity.IsAuthenticated ? HttpContext.Current.User.Identity.Name : "Guest")!! You are Logged In.</p>
-        }
-        
-    </p>
-    <p><button><!-- @Html.ActionLink("About this application", "About", "Home") --> About this application </button></p>
+            <p>Welcome User @(User.Identity.IsAuthenticated ? HttpContext.Current.User.Identity.Name : "Guest")!! You are Logged In.</p>
 
-</div>
+            <p><button>@Html.ActionLink("Log Out", "Logout", "Home")</button></p>
+        }
+
+        </p>
+        <p><button><!-- @Html.ActionLink("About this application", "About", "Home") --> About this application </button></p>
+
+    </div>
 
 <div class="row">
     <div class="col-md-6">
@@ -21,6 +23,7 @@
         <p>Getting started creating recipes using the links below: </p>
         <p><button>@Html.ActionLink("Add User Recipe", "Create", "Recipe")</button></p>
         <p><button>@Html.ActionLink("Add Verified Recipe", "CreateVerified", "Recipe")</button></p>
+        <p><button>@Html.ActionLink("References", "Index", "References")</button></p>
 
     </div>
     <div class="col-md-6">
