--- a/CookingCurator/Views/Home/Login.cshtml
+++ b/CookingCurator/Views/Home/Login.cshtml
@@ -5,13 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Login</h2>
+<h2>Login</h2>                    <p class="text-right">@Html.ActionLink("*", "TestAcc", "Home")</p>
 
 
-@using (Html.BeginForm("Login", "Home", new { returnUrl = Request.QueryString["ReturnUrl"] }, FormMethod.Post)) 
+@using (Html.BeginForm("Login", "Home", new { returnUrl = Request.QueryString["ReturnUrl"] }, FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -39,6 +39,8 @@
         </div>
     </div>
 }
+
+<p class="col-md-offset-2 col-md-10">New User?  @Html.ActionLink("Click here", "Register", "Home") to Register!</p>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
