--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -1,25 +1,22 @@
-﻿@model CookingCurator.EntityModels.RecipeBaseViewModel
+﻿@model CookingCurator.EntityModels.RecipeWithIngredBaseViewModel
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Html.DisplayFor(model => model.title)</h2>
+<h2>Recipe Details</h2>
 
 <div>
-    <h5>
-        by @Html.DisplayFor(model => model.author) |
-        @Html.ActionLink("View all Recipes from this Author", "Authors", new { authorName = Model.author }) 
-    </h5>
+    <h4>Detailed Recipe Information</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.instructions)
+            @Html.DisplayNameFor(model => model.title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.instructions)
+            @Html.DisplayFor(model => model.title)
         </dd>
 
         <dt>
@@ -31,11 +28,27 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.instructions)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.instructions)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.lastUpdated)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.lastUpdated)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.author)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.author)
         </dd>
 
         <dt>
@@ -78,9 +91,20 @@
             @Html.DisplayFor(model => model.mealTimeType)
         </dd>
 
+        <dt>
+            Ingredients
+        </dt>
+
+        <dd>
+            @foreach (var p in Model.ingreds)
+            {
+                <span>@p.ingred_Name</span><br />
+            }
+        </dd>
+
     </dl>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.recipe_Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Recipe List", "Index")
 </p>
