--- a/CookingCurator/Views/Recipe/Edit.cshtml
+++ b/CookingCurator/Views/Recipe/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Edit</h4>
+        <h4>Edit Recipe Details</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
