--- a/CookingCurator/Views/Search/Search.cshtml
+++ b/CookingCurator/Views/Search/Search.cshtml
@@ -35,6 +35,24 @@
     @if(Model.recipeList.Count() > 0)
     {
     <table class="table">
+        <tr>
+            <th>
+                Title
+            </th>
+            <th>
+                Rating
+            </th>
+            <th>
+                Author
+            </th>
+            <th>
+                Verified
+            </th>
+            <th>
+                Country
+            </th>
+            <th></th>
+        </tr>
 
         @foreach (var item in Model.recipeList)
         {
